--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,13 +60,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/sounds/Do.wav
-    - assets/sounds/Re.wav
-    - assets/sounds/Mi.wav
-    - assets/sounds/Fa.wav
-    - assets/sounds/Sol.wav
-    - assets/sounds/La.wav
-    - assets/sounds/Ti.wav
+    # - assets/sounds/Do.wav
+    # - assets/sounds/Re.wav
+    # - assets/sounds/Mi.wav
+    # - assets/sounds/Fa.wav
+    # - assets/sounds/Sol.wav
+    # - assets/sounds/La.wav
+    # - assets/sounds/Ti.wav
+    - assets/sounds/click.wav
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
