implement time signiture feature; update UI; update click sounds (hi & lo)

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/config/
-    - assets/sounds/click.wav
+    - assets/sounds/
     - assets/notes/piano/
     - assets/notes/flute/
     - assets/notes/sine/
